// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginPage /> redering1 test render after click reset 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value=""
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p>
            asdasd
          </p>
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            dotesing1212@gmail.com
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value=""
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p>
          asdasd
        </p>
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          dotesing1212@gmail.com
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LoginPage /> rendering should render button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value=""
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p>
            asdasd
          </p>
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value=""
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p>
          asdasd
        </p>
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LoginPage /> should render button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value=""
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p>
            asdasd
          </p>
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value=""
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p>
          asdasd
        </p>
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LoginPage /> test render after click reset 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value=""
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p>
            asdasd
          </p>
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            dotesing1212@gmail.com
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value=""
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p>
          asdasd
        </p>
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          dotesing1212@gmail.com
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LoginPage /> test render with input value is dotesing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value="dotesing"
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p />
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value="dotesing"
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p />
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<LoginPage /> test render with input value is dotesing@gmail.con and default value selector is empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login__container"
      >
        <p
          class="login__title"
        >
          Login page
        </p>
        <div
          class="login__content"
        >
          <input
            id=""
            name="email"
            placeholder="Enter email..."
            type="text"
            value="dotesing@gmail.com"
          />
          <button>
            Sumbit
          </button>
        </div>
        <div
          class="login__result"
        >
          <p
            class=""
          >
            This is email : 
          </p>
          <p />
        </div>
        <div
          class="login__result login__content"
        >
          <p
            class=""
          >
            This is old email : 
            
          </p>
          <button>
            Reset
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login__container"
    >
      <p
        class="login__title"
      >
        Login page
      </p>
      <div
        class="login__content"
      >
        <input
          id=""
          name="email"
          placeholder="Enter email..."
          type="text"
          value="dotesing@gmail.com"
        />
        <button>
          Sumbit
        </button>
      </div>
      <div
        class="login__result"
      >
        <p
          class=""
        >
          This is email : 
        </p>
        <p />
      </div>
      <div
        class="login__result login__content"
      >
        <p
          class=""
        >
          This is old email : 
          
        </p>
        <button>
          Reset
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
